<resources>
    <string name="app_name">HyperSension</string>
    <string name="action_settings">Settings</string>
    <string name="connect">Koble til</string>
    <string name="disconnect">Koble fra</string>
    <string name="batterystatustext">Batteri status</string>
    <string name="hrtext">Hjerterate:</string>
    <string name="devicestatustext">Status på enhet:</string>
    <string name="devicestatus">On body</string>
    <string name="testsignaltext">Verifisere signal</string>
    <string name="refresh">Oppdater</string>
    <string name="batstatex">Batteri: 200 %</string>
    <string name="infotittle">Guide for målinger med IsensU-enheten</string>
    <string name="infotekst1">1 Skru på IsensU-enheten ved å trykke på PÅ knappen i 3 sekunder til den grønne lysdioden
        slukker.
        \n\nLysdiodene fortsetter å blinke i en oppstartssekvens beskrevet sammen med de andre lyssekvensene nedenfor

    </string>
    <string name="infotekst2">2
        A) <strong>Rens pasientens</strong> hud der elektroder og IsenseU-enheten skal festes.
        \nB) Fest de tre
        elektrodene som vist på figuren under denne teksten.
        \nc) Fest IsenseU-enheten på pasienten ved å benytte belte. Fukt huden
        under elektrodene på beltet
    </string>
    <string name="infotekst3">3 Monter elektrodeledningene til IsensU-enheten og deretter til hver av de tre
        elektrodene. Bruk fargekodene på figuren ovenfor for rett plassering
    </string>
    <string name="infotekst4">4 Kontroller at IsenseU-enheten er klar for måling, Den grønne lysdioden skal blinke hvert
        3. sekund
    </string>
    <string name="infotekst5">5 Start en måling ved å dobbeltpresse på knappen</string>
    <string name="infotekst6">6 Under måling gir den grønne lysdioden double blinkk hvert 3.sekund</string>
    <string name="infotekst7">7 Avslutt måling ved å dobbelt trykke som beskrevet på punkt 5</string>
    <string name="infotekst8">8 Daglig avslutning: Lagring av måledata og ladning
        \nA) Lagring av måledata: Koble IsenseU-Enheten til Datek-HUB ved å bruke USB-ladekabelen. La enheten være
        koblet til Datek-HUB inntil grønn lysdiode på Datek-HUB lyser.
        \nB) Skru av enheten ved å holde knappene inne i 3 sekunder som beskrevet i punk 1
        Koble IsenseU-enheten til strømforsyning via USB-ladekabel
    </string>
    <string name="hssystem">HyperSension systemet</string>
    <string name="lyssekvensene">Dette betyr de ulike lyssekvensene</string>
    <string name="oppstartenhet">Oppstart av enheten:</string>
    <string name="klarto">Klar til opptak:</string>
    <string name="lavtbat">Lavt batteri:</string>
    <string name="opptk">Opptak pågår:</string>
    <string name="lading">Lading pågår:</string>
    <string name="opptakav">Opptakk avbrutt</string>
    <string name="backbutton">backbutton</string>
    <string name="advancedbutton">Avansert</string>
    <string name="title_activity_advanced">AdvancedActivity</string>
    <string name="akgyro">Akselerometer og gyrometer</string>
    <string name="agrafer">Grafer</string>
    <string name="vsigtekst">Verifiser signalet ditt ved å sammenlikne graf b) med graf a). Graf a) viser hvordan signalet skal se ut, mens b) viser ditt signal. Bølgeformene skal se så like ut som mulig </string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
