

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:context=".Fragments.InfoFragment" android:id="@+id/container1" android:background="#FDFDFE">


    <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent" android:id="@+id/container">

        <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_behavior="@string/appbar_scrolling_view_behavior"
                tools:context=".MainActivity">
            <ImageView
                    android:src="@drawable/battery_100"
                    android:layout_width="124dp"
                    android:layout_height="42dp"
                    android:id="@+id/batim2" android:rotation="90"
                    android:verticalScrollbarPosition="defaultPosition" android:scaleX="2" android:scaleY="2.8"
                    android:scaleType="centerInside"
                    app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="25dp"
                    android:layout_marginStart="25dp" android:layout_marginTop="16dp"
                    app:layout_constraintTop_toTopOf="parent"/>
            <Button
                    android:text="@string/disconnect"
                    android:layout_width="411dp"
                    android:layout_height="81dp"
                    android:id="@+id/disconnectbutton"
                    android:background="@color/colorAccent"
                    android:textStyle="normal|bold" android:textSize="30sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
                    android:textColor="#FFFFFF"/>
            <TextView
                    android:text="@string/devicestatustext"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/devicestatustext" android:textStyle="bold"
                    android:textSize="24sp" android:textColor="@android:color/black"
                    android:layout_marginStart="25dp"
                    app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="25dp"
                    android:layout_marginTop="76dp" app:layout_constraintTop_toBottomOf="@+id/hrtext3"/>
            <Button
                    android:text="@string/testsignaltext"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/testsignalbutton" app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginLeft="25dp" android:layout_marginStart="25dp" android:layout_marginTop="21dp"
                    app:layout_constraintTop_toBottomOf="@+id/devicestatustext"/>
            <TextView
                    android:text="@string/devicestatus"
                    android:layout_width="66dp"
                    android:layout_height="20dp"
                    android:id="@+id/devicestatus"
                    app:layout_constraintStart_toEndOf="@+id/devicestatustext" android:layout_marginLeft="25dp"
                    android:layout_marginStart="25dp" android:layout_marginTop="290dp"
                    app:layout_constraintTop_toTopOf="parent"/>
            <Button
                    android:text="@string/akgyro"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/Akselgyro" app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginLeft="24dp" android:layout_marginStart="24dp" android:layout_marginTop="12dp"
                    app:layout_constraintTop_toBottomOf="@+id/testsignalbutton"/>
            <Button
                    android:text="@string/agrafer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/agrafer" app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginLeft="24dp" android:layout_marginStart="24dp" android:layout_marginTop="16dp"
                    app:layout_constraintTop_toBottomOf="@+id/Akselgyro"/>
            <TextView
                    android:layout_width="134dp"
                    android:layout_height="35dp"
                    android:id="@+id/batterystatus2"
                    app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="32dp"
                    android:layout_marginStart="32dp"
                    android:text="@string/batstatex" android:textSize="20sp" android:layout_marginTop="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/batim2"/>
            <TextView
                    android:text="@string/hrtext"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/hrtext3" android:textStyle="bold"
                    android:textSize="24sp" android:textColor="@android:color/black"
                    android:layout_marginTop="20dp"
                    app:layout_constraintTop_toBottomOf="@+id/batterystatus2"
                    app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="24dp"
                    android:layout_marginStart="24dp"/>
            <TextView
                    android:text="0"
                    android:layout_width="52dp"
                    android:layout_height="35dp"
                    android:id="@+id/hrnr3"
                    android:textSize="25sp"
                    app:layout_constraintStart_toEndOf="@+id/hrtext3"
                    android:layout_marginLeft="12dp" android:layout_marginStart="12dp" android:layout_marginTop="20dp"
                    app:layout_constraintTop_toBottomOf="@+id/batterystatus2"/>

        </android.support.constraint.ConstraintLayout>
    </FrameLayout>

</FrameLayout>