<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:context=".Fragments.InfoFragment" android:id="@+id/container1" android:background="#FDFDFE">
    <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent" android:id="@+id/constraintLayout">

        <TextView
                android:layout_width="322dp"
                android:layout_height="64dp"
                android:text="@string/infotittle"
                android:id="@+id/infotittle" android:textSize="25sp"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginLeft="8dp" android:layout_marginStart="8dp" android:layout_marginTop="8dp"
                app:layout_constraintTop_toTopOf="parent"/>
    </android.support.constraint.ConstraintLayout>
    <ScrollView
            android:layout_width="393dp"
            android:layout_height="505dp" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:translationY="80dp" android:translationX="5dp"
            android:scrollbarSize="10dp">
        <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                      android:orientation="vertical" android:scrollbarDefaultDelayBeforeFade="400"
                      android:scrollbarSize="4dp" android:verticalScrollbarPosition="defaultPosition"
        >
            <android.support.constraint.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                <TextView
                        android:layout_width="221dp"
                        android:layout_height="138dp"
                        android:id="@+id/infotekst1" android:text="@string/infotekst1"
                        android:layout_marginTop="8dp"
                        app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
                        android:layout_marginLeft="8dp" android:layout_marginStart="8dp"/>
                <TextView
                        android:text="@string/infotekst2"
                        android:layout_width="337dp"
                        android:layout_height="123dp"
                        android:id="@+id/infotekst2"
                        android:layout_marginTop="8dp"
                        app:layout_constraintTop_toBottomOf="@+id/infotekst1"
                        app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
                        android:layout_marginStart="8dp"/>
                <TextView
                        android:text="@string/infotekst3"
                        android:layout_width="234dp"
                        android:layout_height="96dp"
                        android:id="@+id/infotekst3"
                        android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/imageView4"
                        app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
                        android:layout_marginStart="8dp"/>
                <TextView
                        android:text="@string/infotekst4"
                        android:layout_width="367dp"
                        android:layout_height="40dp"
                        android:id="@+id/infotekst4"
                        android:layout_marginTop="8dp"
                        app:layout_constraintTop_toBottomOf="@+id/imageView5"
                        app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
                        android:layout_marginStart="8dp"/>
                <TextView
                        android:text="@string/infotekst5"
                        android:layout_width="358dp"
                        android:layout_height="21dp"
                        android:id="@+id/infotekst5"
                        android:layout_marginTop="8dp"
                        app:layout_constraintTop_toBottomOf="@+id/imageView6"
                        app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
                        android:layout_marginStart="8dp"/>
                <TextView
                        android:text="@string/infotekst6"
                        android:layout_width="341dp"
                        android:layout_height="44dp"
                        android:id="@+id/infotekst6"
                        android:layout_marginTop="8dp"
                        app:layout_constraintTop_toBottomOf="@+id/imageView7"
                        app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
                        android:layout_marginStart="8dp"/>
                <TextView
                        android:text="@string/infotekst7"
                        android:layout_width="326dp"
                        android:layout_height="52dp"
                        android:id="@+id/infotekst7"
                        android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/imageView8"
                        app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
                        android:layout_marginStart="8dp"/>
                <ImageView
                        android:src="@drawable/on"
                        android:layout_width="144dp"
                        android:layout_height="72dp"
                        android:id="@+id/imageView3" app:layout_constraintStart_toEndOf="@+id/infotekst1"
                        android:layout_marginLeft="8dp" android:layout_marginStart="8dp" android:layout_marginTop="8dp"
                        app:layout_constraintTop_toTopOf="parent"/>
                <ImageView
                        android:src="@drawable/oppkobling"
                        android:layout_width="346dp"
                        android:layout_height="110dp"
                        android:id="@+id/imageView4"
                        app:layout_constraintTop_toBottomOf="@+id/infotekst2" android:layout_marginTop="5dp"
                        app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
                        android:layout_marginStart="8dp"/>
                <ImageView
                        android:src="@drawable/kablerhs"
                        android:layout_width="128dp"
                        android:layout_height="129dp"
                        android:id="@+id/imageView5" app:layout_constraintStart_toEndOf="@+id/infotekst3"
                        android:layout_marginLeft="2dp" android:layout_marginStart="2dp" android:layout_marginTop="8dp"
                        app:layout_constraintTop_toBottomOf="@+id/imageView4"/>
                <ImageView
                        android:src="@drawable/enhetklar"
                        android:layout_width="187dp"
                        android:layout_height="65dp"
                        android:id="@+id/imageView6"
                        android:layout_marginTop="5dp"
                        app:layout_constraintTop_toBottomOf="@+id/infotekst4"
                        app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
                        android:layout_marginStart="8dp"/>
                <ImageView
                        android:src="@drawable/startopptak"
                        android:layout_width="329dp"
                        android:layout_height="89dp"
                        android:id="@+id/imageView7" app:layout_constraintStart_toStartOf="parent"
                        android:layout_marginLeft="8dp" android:layout_marginStart="8dp" android:layout_marginTop="24dp"
                        app:layout_constraintTop_toBottomOf="@+id/infotekst5"/>
                <ImageView
                        android:src="@drawable/underopptak"
                        android:layout_width="314dp"
                        android:layout_height="56dp"
                        android:id="@+id/imageView8"
                        android:layout_marginTop="8dp"
                        app:layout_constraintTop_toBottomOf="@+id/infotekst6"
                        app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
                        android:layout_marginStart="8dp"/>
                <TextView
                        android:text="TextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/textView2"
                        android:layout_marginTop="554dp" app:layout_constraintTop_toBottomOf="@+id/infotekst7"
                        app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="89dp"
                        android:layout_marginStart="89dp"/>
                <TextView
                        android:text="@string/infotekst8"
                        android:layout_width="301dp"
                        android:layout_height="185dp"
                        android:id="@+id/infotekst8" app:layout_constraintStart_toStartOf="parent"
                        android:layout_marginLeft="8dp" android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/infotekst7"/>
            </android.support.constraint.ConstraintLayout>
        </LinearLayout>
    </ScrollView>

</FrameLayout>